--- a/Auteur.html
+++ b/Auteur.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/.ico" href="./images/favicon.ico">
-    <title>Moi</title>
+    <title>SILKSONG</title>
 </head>
 
 <body>
@@ -22,18 +22,18 @@
                     <nav>
                         <img src="./images/hornet_large.png" class="img_header">
                     </nav>
-                    <nav id="Main_Header">
+                    <nav>
                         <h1 style="color: azure;">SILKSONG</h1>
                     </nav>
                 </div>
                 <div>
-                    <nav id="Main_Header">
+                    <nav class="Main_Header">
                         <a href="Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span
                                 class="fa-solid fa-spider"></span></a>
                     </nav>
                 </div>
                 <div>
-                    <nav id="Main_Header">
+                    <nav class="Main_Header">
                         <a href="index.html" title="SHAW" style="color: #c0c0c0;">Acceuil<span
                                 class="fa-solid fa-house"></span></a>
                     </nav>
@@ -42,12 +42,13 @@
             <section id="Second">
 
                 <nav id="Navigation">
-                    <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" aria-label="facebook"><em
-                            class="fa-brands fa-2x fa-facebook"></em></a>
-                    <a href="https://github.com/princecorg" target="_blank" aria-label="github"><em
-                            class="fa-brands fa-2x fa-github"></em></a>
-                    <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
-                            class="fa-brands fa-2x fa-linkedin"></em></a>
+                    <a href="https://www.youtube.com/channel/UCTaaM5i3AWvcDcsqvGkL2Ww" target="_blank"
+                        aria-label="youtube"><span class="fa-brands fa-2x fa-youtube"
+                            style="color: #a50000;"></span></a>
+                    <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank"
+                        aria-label="steam"><span class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
+                    <a href="https://x.com/TeamCherryGames" target="_blank" aria-label="x"><span
+                            class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
 
 
                 </nav>
@@ -64,15 +65,103 @@
                 </nav>
 
             </section>
+        </section>
+    </header>
+    <main>
+        <section id="moi">
 
-
-
+            <img src="./images/Photo.png" alt="Photo de profil" class="profile-image">
+            <h1>Gwendal Cauchon</h1>
+            <p>Étudiant en RT</p>
 
         </section>
 
+        <section id="description">
+            <h2>À Propos de Moi</h2>
+            <p class="paragraphe">
+                J'étais lycée Jean François Millet à Cherbourg et aujourd'hui je suis entrain de faire un BUT RT. Je
+                m'intéresse pour la cybersécurtié et
+                j'aime plutôt bien l'informatique en général. Mais j'ai tout de même d'autres passions en dehors de
+                l'informatique comme par exemple la
+                musique ou bien le dessin.
+            </p>
+
+        </section>
+
+        <section id="interet">
+            <h2>Centre d'intérêt</h2>
+            <div class="interet">
+                <div>
+                    <h3><span class="fa-solid fa-guitar"></span> Ukulele</h3>
+                    <p class="paragraphe">J'ai un ukulele depuis ma naissance mais j'en joue réel depuis 3ans. </p>
+                </div>
+                <div>
+                    <h3><span class="fa-solid fa-cat"></span> Eustache</h3>
+                    <p class="paragraphe">Mon chat Eustache est ma plus grande passion dans ma vie, il n'existe pas de chat plus beau.
+                    </p>
+                </div>
+                <div>
+                    <h3><span class="fa-solid fa-gamepad"></span> Jeu Vidéo</h3>
+                    <p class="paragraphe">Durant mon temps libre, il m'arrive aussi de jouer aux jeux videos en solo ou en multijouer.</p>
+                </div>
+                <div>
+                    <h3><span class="fa-solid fa-cube"></span> Modélisation 3D</h3>
+                    <p class="paragraphe">Je fais aussi de la modélisation 3d sur Blender. J'ai un peu de mal mais mon niveau commence
+                        enfin à s'améliorer. </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="Parcours">
+            <h2>Mon Parcours</h2>
+            <div class="parcours">
+                <div>
+                    <h3>Collège le Hague Dike</h3>
+                    <p class="paragraphe">C'est ici que j'ai passé mon brevet et me suis fais des amis de long termes.
+                    </p>
+                </div>
+                <div>
+                    <h3>Stage dans un magasin d'informatique</h3>
+                    <p class="paragraphe">Pendant ce stage, j'ai construis et configuré des pcs.
+                        <br> C'était cependant difficile sur certains point je n'avais pas assez de connaissances.
+                    </p>
+                </div>
+                <div>
+                    <h3>Lycée Jean François Millet</h3>
+                    <p class="paragraphe">J'y ai passé mon BAC général et eu de bonnes bases en maths et physiques.</p>
+                </div>
+                <div>
+                    <h3>Stage AXIANS</h3>
+                    <p class="paragraphe">J'ai vu comment la cybersécurtié était géré pour les entreprises
+                        <br>et comment résoudre de nombreux problèmes à distances
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Me Contacter</h2>
+            <p>Voici mes moyens de contact afin que vous puissiez me contacter.</p>
+            <div>
+                <a href="gwendal.cauchon@gmail.com" target="_blank"><span class="fa-solid fa-envelope"></span></a>
+                <a href="https://github.com/Blayzer500" target="_blank"><span class="fa-brands fa-github"></span></a>
+                <a href="tel:+330639981111" target="_blank"><span class="fa-solid fa-phone"></span></a>
+            </div>
+        </section>
 
 
-    </header>
+        <footer style="background-color: black;">
+            <nav>
+                <p>Page par Gwendal Cauchon 2025</p>
+            </nav>
+        </footer>
+
+
+
+
+
+
+    </main>
 
 
     <footer>
