--- a/Sujet.html
+++ b/Sujet.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/.ico" href="./images/favicon.ico">
-    <title>SILKSONG !</title>
+    <title>SILKSONG</title>
 </head>
 
 <body style="background-color: black;">
@@ -40,12 +40,13 @@
             <section id="Second">
 
                 <nav id="Navigation">
-                    <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" aria-label="facebook"><em
-                            class="fa-brands fa-2x fa-facebook"></em></a>
-                    <a href="https://github.com/princecorg" target="_blank" aria-label="github"><em
-                            class="fa-brands fa-2x fa-github"></em></a>
-                    <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
-                            class="fa-brands fa-2x fa-linkedin"></em></a>
+                    <a href="https://www.youtube.com/channel/UCTaaM5i3AWvcDcsqvGkL2Ww" target="_blank"
+                        aria-label="youtube"><span class="fa-brands fa-2x fa-youtube"
+                            style="color: #a50000;"></span></a>
+                    <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank"
+                        aria-label="steam"><span class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
+                    <a href="https://x.com/TeamCherryGames" target="_blank" aria-label="x"><span
+                            class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
 
 
                 </nav>
@@ -73,7 +74,7 @@
     </header>
 
 
-   <main>
+    <main>
 
         <section id="Main_Jeu">
             <iframe id="YTB" src="https://www.youtube.com/embed/6XGeJwsUP9c">
@@ -84,19 +85,34 @@
         <section id="Board_Container">
             <div id="Jeu_Board">
                 <img src="./images/07_clover.png" alt="">
-                <span id="Jeu_Text"><h2>Une nouvelle héroïne, un nouveau royaume</h2><p class="paragraphe">Hollow Knight: Silksong est l’aventure indépendante 
-                    la plus attendue de l’univers créé par Team Cherry.
-                     Cette fois, le joueur incarne Hornet, une guerrière agile et redoutable, propulsée dans un nouveau royaume mystérieux. 
-                     Plus rapide, plus verticale et plus dynamique que le premier opus, l’exploration y est au cœur de l’expérience.</p></span>
-                <span id="Jeu_Text"><h2>Un monde vivant et inquiétant</h2><p class="paragraphe">Le monde de Silksong se distingue par son ambiance élégante 
-                    et inquiétante, mêlant ruines anciennes, cités suspendues et forêts mécaniques.
-                     Chaque environnement raconte une histoire à travers ses détails visuels, ses sons et ses créatures uniques. 
-                    La direction artistique reste fidèle au style fait-main qui a rendu la série culte.</p></span>
+                <span id="Jeu_Text">
+                    <h2>Une nouvelle héroïne, un nouveau royaume</h2>
+                    <p class="paragraphe">Hollow Knight: Silksong est l’aventure indépendante
+                        la plus attendue de l’univers créé par Team Cherry.
+                        Cette fois, le joueur incarne Hornet, une guerrière agile et redoutable, propulsée dans un
+                        nouveau royaume mystérieux.
+                        Plus rapide, plus verticale et plus dynamique que le premier opus, l’exploration y est au cœur
+                        de l’expérience.</p>
+                </span>
+                <span id="Jeu_Text">
+                    <h2>Un monde vivant et inquiétant</h2>
+                    <p class="paragraphe">Le monde de Silksong se distingue par son ambiance élégante
+                        et inquiétante, mêlant ruines anciennes, cités suspendues et forêts mécaniques.
+                        Chaque environnement raconte une histoire à travers ses détails visuels, ses sons et ses
+                        créatures uniques.
+                        La direction artistique reste fidèle au style fait-main qui a rendu la série culte.</p>
+                </span>
                 <img src="./images/08_bellhart.png" alt="">
                 <img src="./images/11_lace.png" alt="">
-                <span id="Jeu_Text"><h2>Un système de combat repensé</h2><p class="paragraphe">Le système de combat a été entièrement repensé pour s’adapter aux capacités de Hornet.
-                     Là où le Chevalier privilégiait la précision, Hornet mise sur la vitesse, les acrobaties et l’utilisation d’outils. 
-                     Les affrontements deviennent plus stratégiques, demandant anticipation, réflexes et maîtrise du terrain.</p></span>
+                <span id="Jeu_Text">
+                    <h2>Un système de combat repensé</h2>
+                    <p class="paragraphe">Le système de combat a été entièrement repensé pour s’adapter aux capacités de
+                        Hornet.
+                        Là où le Chevalier privilégiait la précision, Hornet mise sur la vitesse, les acrobaties et
+                        l’utilisation d’outils.
+                        Les affrontements deviennent plus stratégiques, demandant anticipation, réflexes et maîtrise du
+                        terrain.</p>
+                </span>
 
             </div>
 
@@ -104,8 +120,12 @@
 
         <section id="Under_Main_Jeu">
             <h2>L’héritage de Team Cherry continue</h2>
-            <span><p class="paragraphe">Développé par Team Cherry, Silksong est une aventure dense avec des dizaines d’ennemis, des boss mémorables et un scénario plus complet.
-                Attendu par une immense communauté de fans, le jeu est l'évolution ambitieuse de l’univers de Hollow Knight.</p></span>
+            <span>
+                <p class="paragraphe">Développé par Team Cherry, Silksong est une aventure dense avec des dizaines
+                    d’ennemis, des boss mémorables et un scénario plus complet.
+                    Attendu par une immense communauté de fans, le jeu est l'évolution ambitieuse de l’univers de Hollow
+                    Knight.</p>
+            </span>
 
         </section>
 
@@ -138,9 +158,12 @@
                 </h2>
 
                 <p class="paragraphe">
-                    La musique de Silksong, composée par Christopher Larkin, joue un rôle essentiel dans l’atmosphère du jeu.
-                    Ses compositions mêlent mélodies délicates, tensions orchestrales et silences maîtrisés pour accompagner chaque zone avec une identité sonore unique.
-                    Les thèmes musicaux soutiennent l’émotion de l’exploration comme l’intensité des combats, donnant au monde de Silksong une profondeur immersive et mémorable,
+                    La musique de Silksong, composée par Christopher Larkin, joue un rôle essentiel dans l’atmosphère du
+                    jeu.
+                    Ses compositions mêlent mélodies délicates, tensions orchestrales et silences maîtrisés pour
+                    accompagner chaque zone avec une identité sonore unique.
+                    Les thèmes musicaux soutiennent l’émotion de l’exploration comme l’intensité des combats, donnant au
+                    monde de Silksong une profondeur immersive et mémorable,
                     où chaque note renforce le sentiment de mystère et d’émerveillement.
 
                 </p>
@@ -153,7 +176,9 @@
     </main>
 
     <footer>
-        <nav><p>Page par Gwendal Cauchon</p></nav>
+        <nav>
+            <p>Page par Gwendal Cauchon 2025</p>
+        </nav>
     </footer>
 </body>
 
