--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/.ico" href="./images/favicon.ico">
-    <title>SILKSONG !</title>
+    <title>SILKSONG</title>
 </head>
 
 <body id="Accueil">
@@ -28,39 +28,40 @@
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span class="fa-solid fa-spider"
-                                ></span></a>
+                        <a href="Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span
+                                class="fa-solid fa-spider"></span></a>
                     </nav>
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span class="fa-solid fa-user"></span></a>
+                        <a href="Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span
+                                class="fa-solid fa-user"></span></a>
                     </nav>
                 </div>
             </section>
             <section id="Second">
-                
-            <nav id="Navigation">
-                <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" aria-label="facebook"><em
-                        class="fa-brands fa-2x fa-facebook"></em></a>
-                <a href="https://github.com/princecorg" target="_blank" aria-label="github"><em
-                        class="fa-brands fa-2x fa-github"></em></a>
-                <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
-                        class="fa-brands fa-2x fa-linkedin"></em></a>
-                        
 
-            </nav>
-            <nav id="Burger">
-                <input type="checkbox" id="check">
-                <label for="check" class="checkbtn">
-                  <i class="fas fa-bars"></i>
-                </label>
-                <div class="nav-mobile">
-                  <a href="Sujet.html">Sur_Le_Jeu</a>
-                  <a href="Auteur.html">Sur_Moi</a>
-                  <a href="#">Services</a>
-                </div>
-              </nav>
+                <nav id="Navigation">
+                    <a href="https://www.youtube.com/channel/UCTaaM5i3AWvcDcsqvGkL2Ww" target="_blank" aria-label="youtube"><span
+                            class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                    <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank" aria-label="steam"><span
+                            class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
+                    <a href="https://x.com/TeamCherryGames" target="_blank" aria-label="x"><span
+                            class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
+
+
+                </nav>
+                <nav id="Burger">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <div class="nav-mobile">
+                        <a href="Sujet.html">Sur_Le_Jeu</a>
+                        <a href="Auteur.html">Sur_Moi</a>
+                        <a href="#">Services</a>
+                    </div>
+                </nav>
 
             </section>
 
@@ -76,7 +77,10 @@
         <section>
             <a href="/images/Title.png"><img src="./images/Title.png" alt="L'image" /> </a>
             <div id="text">
-                <p class="paragraphe">Silksong est le sequel tant attendu du jeu indé "Hollow Knight"</p>
+                <p class="paragraphe">Silksong est la suite très attendue du jeu indépendant Hollow Knight. <br>
+                     Développé par Team Cherry, ce nouvel opus est bien plus abouti que son prédécesseur.<br>
+                    À mi-chemin entre metroidvania classique et révolution de son genre, <br>
+                    Silksong a bien mérité le prix du meilleur jeu d’aventure de l’année.</p>
             </div>
         </section>
 
@@ -85,15 +89,11 @@
     </main>
 
 
-    <footer>
-
+    <footer id="Acceuil_footer">
+        <nav>
+            <p>Page par Gwendal Cauchon 2025</p>
+        </nav>
     </footer>
-
 </body>
 
 </html>
-
-<!--<section>
-            <a href="" title="SHAW">Accueil<span class="fa-solid fa-house" style="color: #c0c0c0;"></span></a>
-
-        </section>-->
