--- a/Auteur.html
+++ b/Auteur.html
@@ -67,7 +67,7 @@
             </section>
         </section>
     </header>
-    <main>
+    <main style="background-color: black;">
         <section id="moi">
 
             <img src="./images/Photo.png" alt="Photo de profil" class="profile-image">
@@ -150,7 +150,7 @@
         </section>
 
 
-        <footer style="background-color: black;">
+        <footer>
             <nav>
                 <p>Page par Gwendal Cauchon 2025</p>
             </nav>
