--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
                     <nav>
                         <img src="./images/hornet_large.png" class="img_header">
                     </nav>
-                    <nav id="Main_Header">
+                    <nav>
                         <h1 style="color: azure;">SILKSONG</h1>
                     </nav>
                 </div>
                 <div>
-                    <nav id="Main_Header">
+                    <nav class="Main_Header">
                         <a href="Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span
                                 class="fa-solid fa-spider"></span></a>
                     </nav>
                 </div>
                 <div>
-                    <nav id="Main_Header">
+                    <nav class="Main_Header">
                         <a href="Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span
                                 class="fa-solid fa-user"></span></a>
                     </nav>
