--- a/Auteur.html
+++ b/Auteur.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
@@ -13,6 +13,7 @@
 
 <body>
     <div id="loader">Loading</div>
+    
 
 
     <header>
@@ -28,27 +29,26 @@
                 </div>
                 <div>
                     <nav class="Main_Header">
-                        <a href="Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span
+                        <a href="Sujet.html">Sur le jeu<span
                                 class="fa-solid fa-spider"></span></a>
                     </nav>
                 </div>
                 <div>
                     <nav class="Main_Header">
-                        <a href="index.html" title="SHAW" style="color: #c0c0c0;">Acceuil<span
-                                class="fa-solid fa-house"></span></a>
+                        <a href="index.html">Acceuil<span
+                                class="fa-solid fa-home"></span></a>
                     </nav>
                 </div>
             </section>
             <section id="Second">
 
                 <nav id="Navigation">
-                    <a href="https://www.youtube.com/channel/UCTaaM5i3AWvcDcsqvGkL2Ww" target="_blank"
-                        aria-label="youtube"><span class="fa-brands fa-2x fa-youtube"
-                            style="color: #a50000;"></span></a>
-                    <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank"
-                        aria-label="steam"><span class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
-                    <a href="https://x.com/TeamCherryGames" target="_blank" aria-label="x"><span
-                            class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
+                    <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
+                            class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                    <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank"><span
+                            class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
+                    <a href="https://x.com/TeamCherryGames" target="_blank"><span class="fa-brands fa-2x fa-x-twitter"
+                            style="color: #ffffff;"></span></a>
 
 
                 </nav>
@@ -58,14 +58,35 @@
                         <i class="fas fa-bars"></i>
                     </label>
                     <div class="nav-mobile">
-                        <a href="Sujet.html">Sur_Le_Jeu</a>
-                        <a href="Auteur.html">Sur_Moi</a>
-                        <a href="#">Services</a>
+                        <a href="Sujet.html"><p>Sur le jeu<span
+                                class="fa-solid fa-spider"></span></p></a>
+                        <a href="index.html"><p>Acceuil<span
+                                class="fa-solid fa-home"></span></p></a>
+
+                        <nav id="Burger_Navigation">
+                            <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
+                                    class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                            <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"
+                                target="_blank"><span class="fa-brands fa-2x fa-steam"
+                                    style="color: #00355e;"></span></a>
+                            <a href="https://x.com/TeamCherryGames" target="_blank"><span
+                                    class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
+
+
+                        </nav>
+
                     </div>
                 </nav>
 
             </section>
+
+
+
+
         </section>
+
+
+
     </header>
     <main style="background-color: black;">
         <section id="moi">
@@ -97,16 +118,19 @@
                 </div>
                 <div>
                     <h3><span class="fa-solid fa-cat"></span> Eustache</h3>
-                    <p class="paragraphe">Mon chat Eustache est ma plus grande passion dans ma vie, il n'existe pas de chat plus beau.
+                    <p class="paragraphe">Mon chat Eustache est ma plus grande passion dans ma vie, il n'existe pas de
+                        chat plus beau.
                     </p>
                 </div>
                 <div>
                     <h3><span class="fa-solid fa-gamepad"></span> Jeu Vidéo</h3>
-                    <p class="paragraphe">Durant mon temps libre, il m'arrive aussi de jouer aux jeux videos en solo ou en multijouer.</p>
+                    <p class="paragraphe">Durant mon temps libre, il m'arrive aussi de jouer aux jeux videos en solo ou
+                        en multijouer.</p>
                 </div>
                 <div>
                     <h3><span class="fa-solid fa-cube"></span> Modélisation 3D</h3>
-                    <p class="paragraphe">Je fais aussi de la modélisation 3d sur Blender. J'ai un peu de mal mais mon niveau commence
+                    <p class="paragraphe">Je fais aussi de la modélisation 3d sur Blender. J'ai un peu de mal mais mon
+                        niveau commence
                         enfin à s'améliorer. </p>
                 </div>
             </div>
