--- a/Sujet.html
+++ b/Sujet.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
@@ -26,13 +26,13 @@
                 </div>
                 <div>
                     <nav class="Main_Header">
-                        <a href="index.html" title="SHAW" style="color: #c0c0c0;">Acceuil<span
-                                class="fa-solid fa-spider"></span></a>
+                        <a href="index.html">Acceuil<span
+                                class="fa-solid fa-home"></span></a>
                     </nav>
                 </div>
                 <div>
                     <nav class="Main_Header">
-                        <a href="Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span
+                        <a href="Auteur.html">Sur moi<span
                                 class="fa-solid fa-user"></span></a>
                     </nav>
                 </div>
@@ -40,13 +40,12 @@
             <section id="Second">
 
                 <nav id="Navigation">
-                    <a href="https://www.youtube.com/channel/UCTaaM5i3AWvcDcsqvGkL2Ww" target="_blank"
-                        aria-label="youtube"><span class="fa-brands fa-2x fa-youtube"
-                            style="color: #a50000;"></span></a>
-                    <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank"
-                        aria-label="steam"><span class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
-                    <a href="https://x.com/TeamCherryGames" target="_blank" aria-label="x"><span
-                            class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
+                    <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
+                            class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                    <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank"><span
+                            class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
+                    <a href="https://x.com/TeamCherryGames" target="_blank"><span class="fa-brands fa-2x fa-x-twitter"
+                            style="color: #ffffff;"></span></a>
 
 
                 </nav>
@@ -56,9 +55,23 @@
                         <i class="fas fa-bars"></i>
                     </label>
                     <div class="nav-mobile">
-                        <a href="Sujet.html">Sur_Le_Jeu</a>
-                        <a href="Auteur.html">Sur_Moi</a>
-                        <a href="#">Services</a>
+                        <a href="index.html"><p>Acceuil<span
+                                class="fa-solid fa-home"></span></p></a>
+                        <a href="Auteur.html"><p>Sur moi<span
+                                class="fa-solid fa-user"></span></p></a>
+
+                        <nav id="Burger_Navigation">
+                            <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
+                                    class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                            <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"
+                                target="_blank"><span class="fa-brands fa-2x fa-steam"
+                                    style="color: #00355e;"></span></a>
+                            <a href="https://x.com/TeamCherryGames" target="_blank"><span
+                                    class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
+
+
+                        </nav>
+
                     </div>
                 </nav>
 
