--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body id="Accueil">
-    <div id="loader">Loading</div>
+    <section id="loader"><p>Loading</p><div></div></section>
 
 
     <header>
