--- a/Sujet.html
+++ b/Sujet.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="background-color: black;">
-    <div id="loader">Loading</div>
+    <section id="loader"><p>Loading</p><div></div></section>
     <header>
         <section id="header">
             <section id="First">
