--- a/Auteur.html
+++ b/Auteur.html
@@ -21,7 +21,7 @@
             <section id="First">
                 <div>
                     <nav>
-                        <img src="./images/hornet_large.png" class="img_header">
+                        <img src="./images/hornet_large.png" class="img_header" alt="Header_Img">
                     </nav>
                     <nav>
                         <h1 style="color: azure;">SILKSONG</h1>
@@ -91,7 +91,7 @@
     <main style="background-color: black;">
         <section id="moi">
 
-            <img src="./images/Photo.png" alt="Photo de profil" class="profile-image">
+            <img src="./images/Photo.png" alt="Photo de profil" class="Profile_Img">
             <h1>Gwendal Cauchon</h1>
             <p>Étudiant en RT</p>
 
