--- a/Sujet.html
+++ b/Sujet.html
@@ -18,7 +18,7 @@
             <section id="First">
                 <div>
                     <nav>
-                        <img src="./images/hornet_large.png" class="img_header">
+                        <img src="./images/hornet_large.png" class="img_header" alt="Header_Img">
                     </nav>
                     <nav>
                         <h1 style="color: azure;">SILKSONG</h1>
@@ -97,8 +97,8 @@
         </section>
         <section id="Board_Container">
             <div id="Jeu_Board">
-                <img src="./images/07_clover.png" alt="">
-                <span id="Jeu_Text">
+                <img src="./images/07_clover.png" alt="Clover">
+                <div class="Jeu_Text">
                     <h2>Une nouvelle héroïne, un nouveau royaume</h2>
                     <p class="paragraphe">Hollow Knight: Silksong est l’aventure indépendante
                         la plus attendue de l’univers créé par Team Cherry.
@@ -106,18 +106,18 @@
                         nouveau royaume mystérieux.
                         Plus rapide, plus verticale et plus dynamique que le premier opus, l’exploration y est au cœur
                         de l’expérience.</p>
-                </span>
-                <span id="Jeu_Text">
+                    </div>
+                <div class="Jeu_Text">
                     <h2>Un monde vivant et inquiétant</h2>
                     <p class="paragraphe">Le monde de Silksong se distingue par son ambiance élégante
                         et inquiétante, mêlant ruines anciennes, cités suspendues et forêts mécaniques.
                         Chaque environnement raconte une histoire à travers ses détails visuels, ses sons et ses
                         créatures uniques.
                         La direction artistique reste fidèle au style fait-main qui a rendu la série culte.</p>
-                </span>
-                <img src="./images/08_bellhart.png" alt="">
-                <img src="./images/11_lace.png" alt="">
-                <span id="Jeu_Text">
+                    </div>
+                <img src="./images/08_bellhart.png" alt="Bellhart">
+                <img src="./images/11_lace.png" alt="Lace">
+                <div class="Jeu_Text">
                     <h2>Un système de combat repensé</h2>
                     <p class="paragraphe">Le système de combat a été entièrement repensé pour s’adapter aux capacités de
                         Hornet.
@@ -125,7 +125,7 @@
                         l’utilisation d’outils.
                         Les affrontements deviennent plus stratégiques, demandant anticipation, réflexes et maîtrise du
                         terrain.</p>
-                </span>
+                    </div>
 
             </div>
 
@@ -146,22 +146,22 @@
             <div class="carousel">
                 <div class="carousel-slides">
                     <div class="slide">
-                        <img src="./images/06_greymoor.png" alt="Image 1">
+                        <img src="./images/06_greymoor.png" alt="Greymoor">
                     </div>
                     <div class="slide">
-                        <img src="./images/02_coral.png" alt="Image 2">
+                        <img src="./images/02_coral.png" alt="Coral">
                     </div>
                     <div class="slide">
-                        <img src="./images/04_chorus.png" alt="Image 3">
+                        <img src="./images/04_chorus.png" alt="Chorus">
                     </div>
                     <div class="slide">
-                        <img src="./images/09a_peak.png" alt="Image 4">
+                        <img src="./images/09a_peak.png" alt="Peak">
                     </div>
                     <div class="slide">
-                        <img src="./images/03_chambers.png" alt="Image 5">
+                        <img src="./images/03_chambers.png" alt="Chambers">
                     </div>
-
-
+                </div>
+            </div>
         </section>
         <section id="Jeu_Soundtrack">
             <div>
@@ -181,7 +181,7 @@
 
                 </p>
             </div>
-            <div><img id="Sound_Img" src="./images/Silksong_Soundtrack_Cover.png" alt=""></div>
+            <div><img id="Sound_Img" src="./images/Silksong_Soundtrack_Cover.png" alt="Cover"></div>
 
         </section>
 
