--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section id="First">
                 <div>
                     <nav>
-                        <img src="./images/hornet_large.png" class="img_header">
+                        <img src="./images/hornet_large.png" class="img_header" alt="Header_Img">
                     </nav>
                     <nav>
                         <h1 style="color: azure;">SILKSONG</h1>
@@ -89,7 +89,7 @@
     </header>
     <main id="Main_Accueil">
         <section>
-            <a href="/images/Title.png"><img src="./images/Title.png" alt="L'image" /> </a>
+            <a href="/images/Title.png"><img src="./images/Title.png" alt="Titre" /> </a>
             <div id="text">
                 <p class="paragraphe">Silksong est la suite très attendue du jeu indépendant Hollow Knight. <br>
                     Développé par Team Cherry, ce nouvel opus est bien plus abouti que son prédécesseur.<br>
