--- a/Sujet.html
+++ b/Sujet.html
@@ -133,12 +133,12 @@
 
         <section id="Under_Main_Jeu">
             <h2>L’héritage de Team Cherry continue</h2>
-            <span>
+            <div>
                 <p class="paragraphe">Développé par Team Cherry, Silksong est une aventure dense avec des dizaines
                     d’ennemis, des boss mémorables et un scénario plus complet.
                     Attendu par une immense communauté de fans, le jeu est l'évolution ambitieuse de l’univers de Hollow
                     Knight.</p>
-            </span>
+                </div>
 
         </section>
 
